--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,5 +4,5 @@ body {
 
 * {
   /* font-family: 'Noto Sans JP' !important; */
-  font-family: "Roboto";
+  font-family: "Heebo", sans-serif !important;
 }
