--- a/client/src/components/Form/Form.css
+++ b/client/src/components/Form/Form.css
@@ -7,7 +7,7 @@
     width: 4rem;
     height: 4rem;
     margin: 1rem;
-    box-shadow: 1px 0px 5px black;
+    box-shadow: 1px 0px 5px rgba(0,0,0,0.3);
     background: white;
 }
 
