--- a/client/src/components/PostDetails/PostDetails.css
+++ b/client/src/components/PostDetails/PostDetails.css
@@ -5,6 +5,9 @@
     overflow: auto;
     flex-direction: column;
     height: 90vh;
+    border:2px solid #333;
+    /* padding: 0 1rem 0 0; */
+    margin:0 0 0 1rem;
 }
 
 .topic {
@@ -75,6 +78,28 @@ button.btn_add {
     color: green;
 }
 
+
+
+.title{
+    position: relative;
+}
+.pencil {
+    position: absolute;
+    width: auto;
+    height: 1.3rem;
+    right: 0;
+    margin: 0.2rem;
+    cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
 /* width */
 
 ::-webkit-scrollbar {
@@ -85,7 +110,7 @@ button.btn_add {
 /* Track */
 
 ::-webkit-scrollbar-track {
-    background: #fff;
+    background: rgb(238, 238, 238);
 }
 
 
