--- a/client/src/components/PostDetails/PostDetails.css
+++ b/client/src/components/PostDetails/PostDetails.css
@@ -76,7 +76,7 @@ button.btn_add {
     background: white;
     border-color: transparent;
     box-shadow: 0px 1px 2px rgb(0 0 0 / 30%);
-    color: green;
+    color: #673ab7;
 }
 
 
