--- a/client/src/components/PostDetails/PostDetails.css
+++ b/client/src/components/PostDetails/PostDetails.css
@@ -20,7 +20,7 @@
     /* background: #bce1bc; */
     justify-content: center;
     border-left-width: 3px;
-    border-left-color: black;
+    border-left-color: #786a6abd;
     border-left-style: solid;
     position: relative;
 }
@@ -38,15 +38,23 @@
 }
 
 .outer_border {
-    border: 2px solid yellow;
+    box-shadow: 1px 2px 3px rgb(0 0 0 / 30%);
     margin: 0 0 0 1rem;
+    cursor: pointer;
+    transition: all 200ms ease-out;
 }
+.outer_border:hover {
+    box-shadow: 1px 2px 7px rgb(0 0 0 / 30%);
+
+}
+
+
 
 .circle {
     width: 1rem;
     height: 1rem;
     border-radius: 50%;
-    border: 3px solid black;
+    border: 3px solid #786a6abd;
     background-color: white;
     position: absolute;
     left: -9px;
@@ -58,6 +66,7 @@
 }
 
 .head {
+    color:#333;
     display: flex;
     justify-content: center;
     font-size: 3rem;
@@ -91,6 +100,23 @@ button.btn_add {
     right: 0;
     margin: 0.2rem;
     cursor: pointer;
+}
+@media screen and (max-width:517px){
+    .flow_chart{
+        margin: 0;
+    }
+    .topic{
+        min-width: 14rem;
+    }
+
+    
+}
+@media screen and (max-width:489px){
+    .head{
+        font-size: 2rem;
+    }
+
+    
 }
 
 
