front end changes

--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -6,7 +6,7 @@
     font-size: xx-large;
     font-weight: bolder;
     text-shadow: 3px 2px 2px rgb(0 0 0 / 10%);
-    color: #481d95;
+    color: #22094ed9;
     cursor: pointer;
     transition: all 200ms ease-in-out;
 }
