--- a/client/src/components/PostDetails/PostDetails.css
+++ b/client/src/components/PostDetails/PostDetails.css
@@ -86,6 +86,11 @@ button.btn_add {
     border-color: transparent;
     box-shadow: 0px 1px 2px rgb(0 0 0 / 30%);
     color: #673ab7;
+    transition: all 300ms ease-in;
+}
+.btn_add:hover{
+    box-shadow: inset 0px 1px 2px rgb(0 0 0 / 30%);
+    color: rgb(111, 199, 23);
 }
 
 
