--- a/client/src/components/Home/TrackCards.css
+++ b/client/src/components/Home/TrackCards.css
@@ -1,35 +1,35 @@
 .card_head {
-    /* min-width: 5rem; */
-    width: 18rem;
-    box-shadow: 0px 1px 3px rgb(0 0 0 / 60%);
-    display: flex;
-    flex-direction: column;
-    height: auto;
-    border-radius: 11px;
-    margin: 0 0 1rem 0;
+  /* min-width: 5rem; */
+  width: 18rem;
+  box-shadow: 0px 1px 3px rgb(0 0 0 / 60%);
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  border-radius: 11px;
+  margin: 0 0 1rem 0;
 }
 
 .title_card {
-    font-size: 3rem;
-    padding: 1rem;
+  font-size: 2rem;
+  padding: 1rem;
+  width: 100%;
 }
 .Description {
-    padding: 1rem 2rem;
+  padding: 1rem 2rem;
 }
 button.btn_card {
-    background: white;
-    border-color: transparent;
-    box-shadow: 1px 1px 3px rgb(0 0 0 / 60%);
-    color: blue;
-    transition: all 200ms ease-in-out;
+  background: white;
+  border-color: transparent;
+  box-shadow: 1px 1px 3px rgb(0 0 0 / 60%);
+  color: blue;
+  transition: all 200ms ease-in-out;
 }
-.btn_card:hover{
-    box-shadow: inset 1px 1px 3px rgb(0 0 0 / 60%);
-    color:rgb(8, 177, 8);
-
+.btn_card:hover {
+  box-shadow: inset 1px 1px 3px rgb(0 0 0 / 60%);
+  color: rgb(8, 177, 8);
 }
 .outer_btn {
-    display: flex;
-    justify-content: flex-start;
-    margin: 0 0 1rem 2rem;
+  display: flex;
+  justify-content: flex-start;
+  margin: 0 0 1rem 2rem;
 }
